# IronSilo

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .temp_error.txt  .temp_error_prompt.txt  .temp_prompt.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  ENTERPRISE_AUDIT_REPORT.md  IRONSILO_REDESIGN_PROPOSAL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_2026.md  SECURITY_AUDIT_REPORT.md  SECURITY_ISSUES.md  SPRINT_BACKLOG.md  SYSTEM_DESIGN_DOCUMENT.md  SYSTEM_DESIGN_DOCUMENTATION.md  Start_Workspace.bat  Start_Workspace.command  Start_Workspace.sh  Stop_Workspace.bat  Stop_Workspace.command  Stop_Workspace.sh  autobuild.sh  docker-compose.yml  dynamic.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test_output.txt  traefik.yml  v3.0.0-pivot.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  publish.yml  release.yml
.hermes/: test-status.json
.hermes/artifacts/dev/: ironforge_skill.json
.hermes/artifacts/docs/: DEV_JOURNAL.md  IRONFORGE_REDESIGN.md  MASTER_BACKLOG.md  SPRINT_BACKLOG.md
.opencode/: iron-silo-agent.md
cache/: __init__.py  keys.py  kv.py  kv_store.py  lru.py  models.py
dev/: benchmark_all_models.py  dev-prompt.md  health_monitor.py  inference_tester.py  ironforge_cli.py  ironforge_integration.py  loop-prompt.md  pai_algorithm.py  resource_manager.py  setup_wizard.py  system_prompts.py  tui_dashboard.py  wisdom_frames.py
docs/: ADVANCED_MANUAL.md  API.md  ARCHITECTURE.md  COMPLETE_BENCHMARK.md  DEV_JOURNAL.md  ENVIRONMENT.md  ISSUES_IMPROVEMENTS.md  LLM_OPTIMIZATION_GUIDE.md  LOCAL_LLM_OPTIMIZATION.md  MASTER_BACKLOG.md  MODEL_ANALYSIS.md  SIMPLE_MANUAL.md  SYSTEM_DESIGN.md
docs/adr/: ADR-001_TRUE_SILO_ARCHITECTURE.md
docs/runbooks/: OPERATIONAL.md
examples/: production.env
genesys/: .dockerignore  Dockerfile  __init__.py  app.py  requirements.txt
mcp/: .dockerignore  Dockerfile  __init__.py  entrypoint.sh  framework.py  genesys_server.py  khoj_server.py  models.py  requirements.txt
mcp/genesys_server/: __init__.py  app.py  genesys_server.py  server.py
memory/: Dockerfile  main.py
monitoring/: alerts.yml
pipeline/: __init__.py  agent_bridge.py  file_watcher.py  task_schema.py
proxy/: Dockerfile  circuit_breaker.py  classifier.py  compression.py  config.yaml  models.py  proxy.py  tracing.py
rag/: Dockerfile  main.py  requirements.txt
searxng/: settings.yml
security/: __init__.py  api_key_manager.py  encryption.py  key_manager.py  middleware.py
setup/: __init__.py  configurator.py  detector.py  wizard.py
swarm/: Dockerfile  __init__.py  harness_worker.py  main.py  orchestrator.py
tests/: conftest.py
tests/benchmarks/: test_iron_silo_performance.py
tests/contract/: test_mcp_contracts.py
tests/e2e/: test_swarm_workflow.py
tests/fuzz/: test_proxy_fuzz.py
tests/integration/: test_proxy_integration.py  test_security_integration.py
tests/load/: conftest.py  locustfile.py  test_proxy_load.py
tests/unit/: test_api_key_manager.py  test_cache_kv_store.py  test_cache_kv_store_100.py  test_circuit_breaker.py  test_detector.py  test_file_watcher.py  test_file_watcher_100.py  test_file_watcher_watchdog.py  test_genesys_app.py  test_genesys_sql_injection.py  test_key_manager_100.py  test_mcp_framework.py  test_mcp_framework_100.py  test_mcp_servers.py  test_mcp_servers_100.py  test_pipeline_agent_bridge.py  test_pipeline_task_schema.py  test_proxy_classifier.py  test_proxy_compression.py  test_proxy_connection_pool.py  test_proxy_models.py  test_proxy_proxy.py  test_proxy_proxy_100.py  test_proxy_retry.py  test_proxy_sanitization.py  test_proxy_timeout.py  test_proxy_tracing.py  test_rate_limit_persistence.py  test_security.py  test_security_middleware.py  test_setup.py  test_swarm_harness_worker.py  test_swarm_harness_worker_safe.py  test_swarm_main.py  test_swarm_monitor.py  test_swarm_orchestrator.py  test_swarm_orchestrator_safe.py  test_traefik_routing.py  test_tui.py  test_tui_full_coverage.py  (+2 more)
tui/: __init__.py  app.py  cli.py  theme.py
tui/widgets/: __init__.py  container_status.py  log_viewer.py  resource_monitor.py  swarm_monitor.py
