[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "ironsilo"
version = "2.1.1"
description = "A local-first, cross-platform AI development sandbox"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [ "ai", "local", "sandbox", "docker", "llm",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Build Tools", "Topic :: System :: Clustering",]
dependencies = [ "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "httpx>=0.25.0", "headroom-ai[all]>=0.25.0", "diskcache>=5.6.0", "cryptography>=41.0.0", "nltk>=3.10.0", "pydantic>=2.5.0", "pydantic-settings>=2.1.0", "textual>=0.46.0", "rich>=13.7.0", "watchdog>=3.0.0", "python-dotenv>=1.2.2", "pyyaml>=6.0.0", "structlog>=23.2.0", "prometheus-client>=0.19.0", "lightrag-hku>=0.1.0",]
[[project.authors]]
name = "IronSilo Contributors"
email = "dev@ironsilo.dev"

[project.optional-dependencies]
dev = [ "black>=26.3.1", "pytest>=9.1.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "pytest-mock>=3.12.0", "ruff>=0.1.0", "mypy>=1.8.0", "bandit>=1.7.0", "safety>=2.3.0", "pre-commit>=3.6.0", "coverage>=7.4.0", "factory-boy>=3.3.0", "faker>=22.0.0", "httpx>=0.25.0", "testing-postgresql>=1.3.0", "testcontainers>=3.7.0",]
tui = [ "textual>=0.46.0", "rich>=13.7.0",]
redis = [ "redis>=5.0.0",]
search = []
security = [ "cryptography>=41.0.0", "python-jose[cryptography]>=3.3.0", "passlib[bcrypt]>=1.7.0", "python-multipart>=0.0.6",]

[project.urls]
Homepage = "https://github.com/iknowkungfubar/IronSilo"
Documentation = "https://github.com/iknowkungfubar/IronSilo/blob/main/docs/SIMPLE_MANUAL.md"
Repository = "https://github.com/iknowkungfubar/IronSilo"
Issues = "https://github.com/iknowkungfubar/IronSilo/issues"
Changelog = "https://github.com/iknowkungfubar/IronSilo/blob/main/CHANGELOG.md"

[project.scripts]
ironsilo = "tui.cli:main"
ironsilo-monitor = "tui.cli:monitor"
ironsilo-setup = "setup.wizard:main"
turintech-ironsilo = "tui.cli:main"
turintech-ironsilo-monitor = "tui.cli:monitor"
turintech-ironsilo-setup = "setup.wizard:main"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [ "memory/main.py", "rag/main.py",]
[[tool.mypy.overrides]]
module = [ "dev.*", "proxy.*", "swarm.*", "mcp.*", "security.*", "pipeline.*", "cache.*", "tui.*", "setup.*",]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
no_implicit_optional = false
allow_untyped_globals = true
allow_untyped_calls = true

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ ".",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--strict-markers", "--strict-config", "-v", "--tb=short", "--color=yes",]
markers = [ "unit: Unit tests (fast, no external dependencies)", "integration: Integration tests (may require Docker)", "e2e: End-to-end tests (full stack)", "security: Security tests", "slow: Slow tests (>1s execution time)",]

[tool.coverage.run]
source = [ ".",]
omit = [ "tests/*", "docs/*", ".git/*", "__pycache__/*", "*.py[cod]", "*$py.class",]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
show_missing = true
skip_covered = true
fail_under = 30

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff.lint.per-file-ignores]
"dev/*" = [ "E722",]
"security/*" = [ "E402",]
"tests/*" = [ "E402", "E741", "F811",]

[tool.setuptools.packages.find]
include = [ "proxy*", "mcp*", "pipeline*", "security*", "cache*", "tui*", "setup*", "swarm*", "rag*", "memory*", "dev*",]
